--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,6 @@ var/
 *.egg
 
 # PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
 
@@ -34,7 +32,7 @@ var/
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
+# Unit test
 htmlcov/
 .tox/
 .coverage
@@ -56,8 +54,6 @@ local_settings.py
 # Flask stuff:
 instance/
 .webassets-cache
-
-
 
 # Scrapy stuff:
 .scrapy
